center logo and text, set max-width of left side like the design requirements, and set min-height to ensure the background image is still shown fully rather than having white space on the top and bottom

--- a/style.css
+++ b/style.css
@@ -18,7 +18,8 @@ main {
 }
 
 .left {
-    height: 100%;
+    min-height: 100%;
+    max-width: 30%;
     background-image: url("./assets/images/background.jpg");
     background-size: clamp(2000px, 140%, 5000px) auto;
     background-repeat: no-repeat;
@@ -30,10 +31,11 @@ main {
 
 .site-name {
     flex: 1 0 auto;
-    display: flex;
     font-size: 80px;
     letter-spacing: 1rem;
     color: white;
+    display: flex;
+    align-items: center;
 }
 
 .credit {
